project(tp3)

add_executable(demo_sem demo_sem.c sem_Syst5.c)
add_executable(demo_shm demo_shm.c)
add_executable(sem51 sem51.c sem_Syst5.c)
add_executable(shm2 shm2.c)
add_executable(shm3 shm3.c)
add_executable(shm4 shm4.c)
add_executable(shm5 shm5.c)
add_executable(shm6 shm6.c)
add_executable(sem10 sem10.c sem_Syst5.c)